[package]
name = "rummy"
version = "0.1.1"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
num_cpus = "1.17.0"
quickcheck = "1.0.3"
rand = "0.9.1"
rayon = "1.10.0"
smallvec = "1.15.1"
awful_aj = { version = "*", git = "https://github.com/graves/awful_aj" }
clap = { version = "4.5.38", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
terminal_size = "0.4.3"
